Upgrade agenda and test iaac to java11.